removed a redudant assert, problem in selectElevator.